# dyn_derive

./: .gitignore  Cargo.toml  README.md
dyn_derive/: Cargo.toml  README.md
dyn_derive/fixtures/input/: debug.rs  partial_eq.rs
dyn_derive/fixtures/input/method/: monad.rs  normal.rs  receiver.rs  self.rs  tuple.rs  variance.rs
dyn_derive/fixtures/input/super/: add.rs  clone.rs
dyn_derive/fixtures/output/: add.rs  clone.rs  debug.rs  partial_eq.rs
dyn_derive/fixtures/output/method/: monad.rs  normal.rs  receiver.rs  self.rs  tuple.rs  variance.rs
dyn_derive/fixtures/output/super/: add.rs  clone.rs  debug.rs  partial_eq.rs
dyn_derive/fixtures/output/super/method/: receiver.rs
dyn_derive/src/: dyn_impl.rs  dyn_trait.rs  generics.rs  lib.rs  subst.rs  subst_self.rs
dyn_derive/src/derive/: clone.rs  mod.rs  partial_eq.rs  utils.rs
dyn_derive/src/tests/: mod.rs  super_traits.rs  utils.rs
dyn_derive/tests/: add.rs  clone.rs  derive.rs  dyn_generics.rs  generic.rs  generics.rs  input.rs  method_generics.rs  partial_eq.rs  trait_generics.rs
dyn_std/: Cargo.toml  README.md
dyn_std/src/: any.rs  cast.rs  clone.rs  cmp.rs  fmt.rs  inst.rs  lib.rs  map.rs  ops.rs
dyn_std/src/core/: clone.rs  cmp.rs  fmt.rs  hash.rs  mod.rs  ops.rs
dyn_traits/: Cargo.toml  README.md
dyn_traits/src/: any.rs  cmp.rs  lib.rs  ops.rs  ptr.rs
dynex/: Cargo.toml  README.md
dynex/src/: dyn_impl.rs  dyn_trait.rs  lib.rs
dynex/src/derive/: mod.rs
dynex/tests/: add.rs  clone.rs  derive.rs  partial_eq.rs
dynex_core/: Cargo.toml  README.md
dynex_core/src/: any.rs  lib.rs  ptr.rs
