[package]
name = "dyn_derive"
version = "0.2.2"
edition = "2021"
license = "MIT"
keywords = ["dyn", "derive", "trait", "partial-eq", "clone"]
description = "Inherit and derive object-unsafe traits for dynamic Rust."
readme = "README.md"
repository = "https://github.com/shigma/dyn_derive"
documentation = "https://docs.rs/dyn_derive"

[lib]
proc-macro = true

[features]
default = ["extra-cmp-impl"]
extra-cmp-impl = []

[dependencies]
dyn_std = { version = "0.2.1", path = "../dyn_std" }
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "2.0.68", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = "1.0.80"
