[package]
name = "dyn_derive"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["dyn", "derive", "trait", "partial-eq", "clone"]
description = "Inherit and derive object-unsafe traits for dynamic Rust."
readme = "README.md"
repository = "https://github.com/shigma/dyn_derive"
documentation = "https://docs.rs/dyn_derive"

[lib]
proc-macro = true

[features]
default = ["extra-cmp-impl"]
extra-cmp-impl = []

[dependencies]
dyn_std = { version = "0.3.0", path = "../dyn_std" }
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "2.0.68", features = ["extra-traits", "full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
prettyplease = "0.2.20"
trybuild = "1.0.80"
walkdir = "2.5.0"
