[package]
name = "dynex_core"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["dynamic", "derive", "trait", "object", "partial-eq", "clone"]
description = "Magically derive object-unsafe traits"
readme = "README.md"
repository = "https://github.com/shigma/dynex"
documentation = "https://docs.rs/dynex_core"
