[package]
name = "dynex_core"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["dyn", "derive", "trait", "partial-eq", "clone"]
description = "Core functionality for the `dynex` crate."
readme = "README.md"
repository = "https://github.com/shigma/dynex"
documentation = "https://docs.rs/dynex_core"
